@@ -1,6 +1,7 @@
 package de.ganzer.core.util;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Objects;
 import java.util.function.Function;
 
@@ -271,7 +272,7 @@ public final class FileNames {
      */
     public static String getUniqueName(String path, String hint) {
         Objects.requireNonNull(path, "FileNameTools::getUniqueName: path");
-        Path result = getUniqueName(Path.of(path), hint);
+        Path result = getUniqueName(Paths.get(path), hint);
 
         return result == null ? null : result.toString();
     }
@@ -321,7 +322,7 @@ public final class FileNames {
         else
             newName = String.format(countedFormat, name, 2);
 
-        Path newPath = Path.of(dir, newName + ext);
+        Path newPath = Paths.get(dir, newName + ext);
 
         if (!newPath.toFile().exists())
             return newPath;
@@ -332,7 +333,7 @@ public final class FileNames {
             else
                 newName = String.format(countedFormat, name, i);
 
-            newPath = Path.of(dir, newName + ext);
+            newPath = Paths.get(dir, newName + ext);
 
             if (!newPath.toFile().exists())
                 return newPath;
@@ -354,7 +355,7 @@ public final class FileNames {
      */
     public static String getNameWithoutLastExtension(String path) {
         Objects.requireNonNull(path, "FileNameTools::getNameWithoutLastExtension: path");
-        return getNameWithoutLastExtension(Path.of(path));
+        return getNameWithoutLastExtension(Paths.get(path));
     }
 
     /**
@@ -392,7 +393,7 @@ public final class FileNames {
      */
     public static String getNameWithoutExtensions(String path) {
         Objects.requireNonNull(path, "FileNameTools::getNameWithoutExtensions: path");
-        return getNameWithoutExtensions(Path.of(path));
+        return getNameWithoutExtensions(Paths.get(path));
     }
 
     /**
@@ -468,7 +469,7 @@ public final class FileNames {
      */
     public static String getAllExtensions(String path) {
         Objects.requireNonNull(path, "FileNameTools::getAllExtensions: path");
-        return getAllExtensions(Path.of(path));
+        return getAllExtensions(Paths.get(path));
     }
 
     /**
